<resources>
    <string name="app_name">PhotoArchive</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_photos">Photos</string>
    <string name="title_albums">Albums</string>
    <string name="title_account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="demo">demo</string>
    <string name="local_photo">Local photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="remote">Remote</string>
    <string name="title_local">Local</string>
    <string name="title_remote">Remote</string>
    <string name="base_url">https://sushkovs.com/photoarchive/api</string>
    <string name="share_sith">Share</string>
    <string name="login_failed">Login failed</string>
    <string name="type_description">Type description</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="edit">Edit</string>
</resources>