<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_photos">

    <fragment
        android:id="@+id/navigation_photos"
        android:name="com.bytza.photoarchive.ui.photos.PotosFragment"
        android:label="@string/title_remote"
        tools:layout="@layout/fragment_photos" >
        <action
            android:id="@+id/action_navigation_photos_to_navigation_edit_remote"
            app:destination="@id/navigation_edit_remote" />
    </fragment>

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.bytza.photoarchive.ui.photoslocal.PhotosLocalFragment"
        android:label="@string/title_local"
        tools:layout="@layout/fragment_photos_local" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.bytza.photoarchive.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_navigation_account_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.bytza.photoarchive.ui.account.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>
    <fragment
        android:id="@+id/navigation_edit_remote"
        android:name="com.bytza.photoarchive.ui.EditPhotoFragment"
        android:label="title_edit_photo"
        tools:layout="@layout/fragment_edit_photo">
        <action
            android:id="@+id/action_navigation_edit_remote_to_navigation_photos"
            app:destination="@id/navigation_photos" />
    </fragment>
</navigation>